50.all-kubernetes/full-configuation/k8s/3-example/3-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver-v1
spec:
  ingressClassName: external-nginx
  rules:
    - host: testing3.yogeshpawar.info
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: echoserver-v1
                port:
                  number: 8080
